update all pages insert best design function

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "serve": "^11.2.0"
   },
   "main": "index.html",
-  "name": "swiper-effect-coverflow",
+  "name": "swiper-autoplay-progress",
   "scripts": {
     "build": "echo This is a static template, there is no bundler or bundling involved!",
     "start": "serve"
